# gnark-sandbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
gnark-cli/: Cargo.toml
gnark-cli/src/: main.rs
gnark-ffi/: Cargo.toml  build.rs
gnark-ffi/go/: go.mod  sp1-recursion-gnark.h
gnark-ffi/go/sp1/: prove.go
gnark-ffi/src/: constraint.rs  groth16_bn254.rs  lib.rs  plonk_bn254.rs  witness.rs
gnark-ffi/src/ffi/: native.rs
