[workspace]
members = [
    "gnark-cli",
    "gnark-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourgithubusername/gnark-sandbox"
keywords = ["cryptography", "zero-knowledge", "gnark"]
categories = ["cryptography"]

# Use 2021 resolver
resolver = "2"

[workspace.dependencies]
# Direct dependency references
gnark-ffi = { path = "gnark-ffi" }

# External dependencies from crates.io 
p3-field = "0.2.2-succinct"
p3-symmetric = "0.2.2-succinct"
p3-baby-bear = "0.2.2-succinct"

# SP1-specific dependencies directly from github
sp1-recursion-compiler = { git = "https://github.com/succinctlabs/sp1.git", rev = "a80c17c66313918352b14561fbe5f12cc8416409" }
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1.git", rev = "a80c17c66313918352b14561fbe5f12cc8416409" }
sp1-stark = { git = "https://github.com/succinctlabs/sp1.git", rev = "a80c17c66313918352b14561fbe5f12cc8416409" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

