[package]
name = "gnark-cli"
description = "CLI for gnark-ffi interactions"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
gnark-ffi = { path = "../gnark-ffi" }
clap = { version = "4.5.9", features = ["derive"] }
bincode = "1.3.3"